tests/negative/unterminated_nested_comment.spk
(print "$0" 1) /* outer /* inner closed */ but outer is not
